Refactor card types to use class instead of a List<String> Optimize Zone and other areas to use CardCollection