@@ -3,6 +3,7 @@ package forge.game.ability.effects;
 import forge.game.ability.AbilityUtils;
 import forge.game.ability.SpellAbilityEffect;
 import forge.game.card.Card;
+import forge.game.card.CardCollectionView;
 import forge.game.spellability.SpellAbility;
 import forge.game.zone.ZoneType;
 
@@ -12,29 +13,29 @@ public class BondEffect extends SpellAbilityEffect {
     @Override
     public void resolve(SpellAbility sa) {
         // find card that triggered pairing first
-        List<Card> trigCards = AbilityUtils.getDefinedCards(sa.getHostCard(), sa.getParam("Defined"), sa);
+        CardCollectionView trigCards = AbilityUtils.getDefinedCards(sa.getHostCard(), sa.getParam("Defined"), sa);
 
         // Check that this card hasn't already become paired by an earlier trigger
-        if (trigCards.get(0).isPaired() || !trigCards.get(0).isInZone(ZoneType.Battlefield)) {
+        if (trigCards.getFirst().isPaired() || !trigCards.getFirst().isInZone(ZoneType.Battlefield)) {
             return;
         }
 
         // find list of valid cards to pair with
-        List<Card> cards = sa.getActivatingPlayer().getGame().getCardsIn(ZoneType.Battlefield);
+        CardCollectionView cards = sa.getActivatingPlayer().getGame().getCardsIn(ZoneType.Battlefield);
         cards = AbilityUtils.filterListByType(cards, sa.getParam("ValidCards"), sa);
         if (cards.isEmpty()) {
             return;
         }
 
-        Card partner = cards.get(0);
+        Card partner = cards.getFirst();
         // skip choice if only one card on list
         if (cards.size() > 1) {
             partner = sa.getActivatingPlayer().getController().chooseSingleEntityForEffect(cards, sa, "Select a card to pair with");
         }
 
         // pair choices together
-        trigCards.get(0).setPairedWith(partner);
-        partner.setPairedWith(trigCards.get(0));
+        trigCards.getFirst().setPairedWith(partner);
+        partner.setPairedWith(trigCards.getFirst());
     }
 
     @Override
